[package]
name = "promote-me"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
url = "2.5.2"
axum = {version = "0.7.5", features = ["macros"]}
once_cell = "1.19.0"
hmac = "0.12.1"
hex = "0.4.3"
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
reqwest = { version = "0.12.24", default-features = false, features = [
  "json",
  "rustls-tls"
] }
serde_json = "1.0.145"
serenity = { version = "0.12.4", features = [
  "client",
  "gateway",
  "rustls_backend",
  "model",
  "collector",
  "cache"
] }
tokio = { version = "1.48.0", features = ["full"] }
tokio-tungstenite = { version = "0.28.0", features = [
  "rustls-tls-native-roots"
] }
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.15"
serde = { version = "1.0", features = ["derive"] }
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+1"] }
sha2 = "0.10.9"
futures-util = "0.3.30"
aws-lc-rs = "1.14.1"
rustls = "0.23.34"
feed-rs = { version = "2.3.1", features = ["sanitize"] }
chrono = "0.4.42"
twilight-model = { git = "https://github.com/twilight-rs/twilight" }
twilight-http = { git = "https://github.com/twilight-rs/twilight" }
